# Yolov8_Libtorch_Segmentation

./: CMakeLists.txt  README.md  main.cpp  times.hpp  yolov5.cpp  yolov5_seg.cpp  yolov5_utils.cpp  yolov5_utils.h
